--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,147 @@ body {
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
-  font-family: 'Ador Symbol', Helvetica, Arial, Lucida, sans-serif;
+  font-family: Georgia, serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+.slide-enter,
+.slide-exit {
+  transition: transform 3000ms ease-out;
+}
+
+.slide-enter {
+  transform: translateX(-100%);
+}
+
+.slide-enter.slide-enter-active {
+  transform: translateX(0%);
+}
+
+.slide-enter-done {
+  transform: translateX(0%);
+}
+
+/* Hide previous page */
+.slide-exit {
+  opacity: 0;
+}
+
+.slide-exit-active {
+  transform: translateX(-100%);
+}
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.content {
+  opacity: 0;
+}
+.content-title-enter {
+  opacity: 0;
+}
+.content-title-enter-active {
+  opacity: 1;
+  transition: opacity 2000ms;
+}
+.content-title-enter-done {
+  opacity: 1;
+}
+.content-title-exit {
+  opacity: 1;
+}
+.content-title-exit-active {
+  opacity: 0;
+  transition: opacity 1000ms;
+}
+.content-title-exit-done {
+  opacity: 0;
+}
+
+.tag-left-enter {
+  transform: translateX(-120%);
+}
+.tag-left-enter-active {
+  transform: translateX(-120%);
+  transition: transform 1000ms ease-out;
+}
+.tag-left-enter-done {
+  transform: translateX(0%);
+}
+.tag-left-exit {
+  opacity: 1;
+}
+.tag-left-exit-active {
+  opacity: 0;
+  transition: transform 1000ms ease-out;
+}
+.tag-left-exit-done {
+  opacity: 0;
+}
+
+.tag-right-enter {
+  transform: translateX(120%);
+}
+.tag-right-enter-active {
+  transform: translateX(120%);
+  transition: transform 1000ms ease-out;
+}
+.tag-right-enter-done {
+  transform: translateX(0%);
+}
+.tag-right-exit {
+  opacity: 1;
+}
+.tag-right-exit-active {
+  opacity: 0;
+  transition: transform 1000ms ease-out;
+}
+.tag-right-exit-done {
+  opacity: 0;
+}
+
+.tag-center-enter {
+  transform: translateY(120%);
+}
+.tag-center-enter-active {
+  transform: translateY(120%);
+  transition: transform 1000ms ease-out;
+}
+.tag-center-enter-done {
+  transform: translateY(0%);
+}
+.tag-center-exit {
+  opacity: 1;
+}
+.tag-center-exit-active {
+  opacity: 0;
+  transition: transform 1000ms ease-out;
+}
+.tag-center-exit-done {
+  opacity: 0;
+}
+
+.slide-enter,
+.slide-exit {
+  transition: transform 300ms ease-out;
+}
+
+.slide-enter {
+  transform: translateX(100%);
+}
+
+.slide-enter.slide-enter-active {
+  transform: translateX(0%);
+}
+
+/* Hide previous page */
+.slide-exit {
+  opacity: 0;
+}
+
+.slide-exit-active {
+  transform: translateX(-100%);
 }
