--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,15 @@
   opacity: 0;
   transition: opacity 0.2s ease-in-out;
 }
+.swiper-button-next {
+  color: #000 !important;
+  opacity: 70;
+}
+
+.swiper-button-prev {
+  color: #000 !important;
+  opacity: 70;
+}
 
 .swiper-slide {
   z-index: 2;
